--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -14,3 +14,22 @@
 .maxHeight {
   height: 100%;
 }
+
+.pic-caption {
+  margin-top: -0.8rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.centered {
+  margin: 0 auto;
+}
+
+.project-entry-journey > p {
+  width: 100%;
+}
+
+.project-entry-journey > p > img {
+  margin: 0 auto;
+  display: block;
+}
