--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -15,21 +15,43 @@
   height: 100%;
 }
 
-.pic-caption {
-  margin-top: -0.8rem;
-  margin-bottom: 1.5rem;
-  text-align: center;
-}
-
 .centered {
   margin: 0 auto;
 }
 
-.project-entry-journey > p {
-  width: 100%;
+.project-entry-journey {
+  .flex-with-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .pic-caption {
+    margin-bottom: 1.5rem;
+    text-align: center;
+    font-size: 1.2rem;
+  }
 }
 
+.project-entry-journey > p {
+  width: 100%;
+
+  .pic-caption {
+    margin-top: -0.8rem;
+  }
+}
+
+.project-entry-journey .flex-with-wrap img,
 .project-entry-journey > p > img {
   margin: 0 auto;
   display: block;
+  max-width: 90vw;
+  max-height: 90vh;
+
+  @media (min-width: 1200px) {
+    max-width: 50vw;
+    max-height: 60vh;
+  }
 }
