--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -44,14 +44,24 @@
 }
 
 .project-entry-journey .flex-with-wrap img,
+.project-entry-journey > div > img,
 .project-entry-journey > p > img {
   margin: 0 auto;
   display: block;
-  max-width: 90vw;
-  max-height: 90vh;
+  max-width: 70vw;
+  max-height: 70vh;
+  padding: 0px 16px;
 
   @media (min-width: 1200px) {
-    max-width: 50vw;
-    max-height: 60vh;
+    max-width: 30vw;
+    max-height: 30vh;
+  }
+}
+
+h1,
+h2,
+h3 {
+  &:first-letter {
+    color: #900000;
   }
 }
